--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "repository": {
       "type": "git",
-      "url": "git+https://github.com/payvic/payvic-lipanampesa.git"
+      "url": "git+https://github.com/apxcde/lipanampesa.git"
     },
     "keywords": [
       "mpesa",
@@ -18,9 +18,9 @@
     "author": "mwamodo",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/payvic/payvic-lipanampesa/issues"
+      "url": "https://github.com/apxcde/lipanampesa/issues"
     },
-    "homepage": "https://github.com/payvic/payvic-lipanampesa#readme",
+    "homepage": "https://github.com/apxcde/lipanampesa#readme",
     "dependencies": {
       "axios": "^0.19.0"
     }
